--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ edition = "2021"
 teloxide = { version = "0.12", features = ["macros"] }
 log = "0.4"
 pretty_env_logger = "0.4"
-tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
-serde = {version = "1.0.199", features = ["derive"]}
+tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
+serde = { version = "1.0.199", features = ["derive"] }
 serde_json = "1.0.116"
 dotenv_codegen = "0.15.0"
+chrono = "0.4.38"
+
+[dependencies.mongodb]
+version = "2.8.2"
+features = ["tokio-runtime"]
