only allow owner or specified user to access bot

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ BOT_TOKEN=<Token Generated Using BotFather>
 DB_PASSWORD=
 DB_USERNAME=
 DB_ENDPOINT=
+MYID=<Your Userid, Only User with this ID Will be able to access bot features>
