update readme with basic info and add demos

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 BOT_TOKEN=<Token Generated Using BotFather>
-DB_PASSWORD=
-DB_USERNAME=
-DB_ENDPOINT=
-MYID=<Your Userid, Only User with this ID Will be able to access bot features>
+DB_PASSWORD=<Mongodb user password>
+DB_USERNAME=<Mongodb username>
+DB_ENDPOINT=cluster.abcxyz.mongodb.net/?retryWrites=true&w=majority
+MYID=<Your telegram Userid, Only telegram User with this ID Will be able to access bot features>
